--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -23,6 +23,19 @@
     text-decoration: none;
   }
 
+  p, a, h1, h2, h3, h4 {
+    margin: 0;
+    padding: 0;
+  }
+
+  a:active, a:focus {
+    outline: none;
+  }
+
+  input, button, submit {
+    border: none;
+  }
+
   *:focus {
     outline: none;
   }
