--- a/src/views/models/BrowserView/Cell/NullableCell.scss
+++ b/src/views/models/BrowserView/Cell/NullableCell.scss
@@ -7,28 +7,29 @@
 
 .button {
   position: absolute;
-  top: 0;
-  left: -130px;
-  width: 120px;
-  height: 100%;
+  top: -2px;
+  left: -47px;
+  width: 50px;
   @include button;
+  border-radius: 2px;
+  border-right: none;
+  padding: 14px 10px;
 
-  &.red {
-    border-color: rgb(200, 31, 0);
-    color: rgb(200, 31, 0);
+  &.blue {
+    border-color: rgb(74, 144, 226);
     background: #fff;
 
-    &:hover {
-      background: rgb(200, 31, 0);
-      color: #fff;
+    div {
+      color: rgba(0,0,0,.3);
+      background: rgba(0,0,0,.07);
+      padding: 2px 7px 2px 4px;
+      border-radius: 1px;
+      font-style: italic;
+      text-transform: none;
 
-      svg {
-        fill: #fff;
+      &:hover {
+        background: rgba(0,0,0,.14);
       }
-    }
-
-    svg {
-      fill: rgb(200, 31, 0);
     }
   }
 }
