--- a/src/views/models/BrowserView/Cell.scss
+++ b/src/views/models/BrowserView/Cell.scss
@@ -48,6 +48,7 @@
     background: #fff;
     border: 0;
     margin-bottom: 10px;
+    margin-right: 10px;
     padding: 10px;
   }
 
@@ -107,14 +108,13 @@
   }
 
   .datepicker {
-    position: absolute;
+    position: relative;
     left: 0;
     top: 0;
-    min-width: 270px;
+    min-width: 250px;
     width: 100%;
     height: 100%;
     background: #fff;
-    @include cellborder($accent-blue);
   }
 }
 
