Added relation link, search shortcut

--- a/src/views/models/BrowserView/Cell.scss
+++ b/src/views/models/BrowserView/Cell.scss
@@ -30,6 +30,12 @@
     display: inline-block;
     white-space: nowrap;
     line-height: 17px;
+    position: relative;
+  }
+
+  .relationlink {
+    position: absolute;
+    right: 0;
   }
 
   .id {
