--- a/src/views/models/BrowserView/BrowserView.scss
+++ b/src/views/models/BrowserView/BrowserView.scss
@@ -22,6 +22,7 @@ $tableHeadExpanded: 100px;
   cursor: pointer;
   transition: .3s all;
   overflow: hidden;
+  background: #fff;
 
   &.search {
     display: flex;
