Fix colors of LightCell

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@ $blue-grey-dark: #8989B1;
 $accent-shade: #9FE9AE;
 
 $accent: #00b861;
-$accent-blue: #4A90E2;
+$accent-blue: #2a7ed2;
 $blue1: #FCFDFE;
 $blue2: #EEF9FF;
 $blue3: #DDF2FA;
