--- a/src/views/models/DatabrowserView/Cell.scss
+++ b/src/views/models/DatabrowserView/Cell.scss
@@ -129,7 +129,7 @@
 }
 
 .rowselected {
-  background-color: #4A90E2 !important;
+  background-color: #2a7ed2 !important;
   color: #fff;
   input {
     color: #fff !important;
