--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -23,7 +23,9 @@ $newGrey3: #1B1F25;
 $newGrey2: #F3F3F6;
 $newGrey1: #F3F3F3;
 
-
+$lightGreen: #C9EBD7;
+$lightYellow: #FCF6A9;
+$lightBrown: #D1A700;
 
 $green: #27AE60;
 $blue: #2A7ED2;
@@ -62,6 +64,7 @@ $size25: 25px;
 $size38: 38px;
 $size60: 60px;
 $size96: 96px;
+$size1000: 1000px;
 
 $size12: 12px;
 $size14: 14px;
