--- a/src/views/models/SchemaView/FieldRow.scss
+++ b/src/views/models/SchemaView/FieldRow.scss
@@ -49,6 +49,15 @@
     font-size: 14px;
   }
 
+  .relation{
+    background: $lightYellow;
+    color: $lightBrown;
+    font-size: 11px;
+    padding: 3px 5px;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-left: 10px;
+  }
   .system {
     background: $grey1;
     color: $grey4;
