--- a/src/views/models/SchemaView/SchemaView.scss
+++ b/src/views/models/SchemaView/SchemaView.scss
@@ -5,6 +5,28 @@
   height: 100%;
 }
 
+.group{
+  margin-left: auto;
+  display: flex;
+}
+.group_button {
+  @include button;
+  padding: 5px 7px 5px 7px;
+  text-align: center;
+  border: 1px solid $grey1;
+  border-radius: 0.5px;
+  font-size: 16px;
+  color: $grey4;
+  background: white;
+  box-shadow: 1px 1px 2px $grey3;
+
+  &.selected {
+    color: white;
+    background: $blue;
+    border: 0px solid $grey3;
+  }
+}
+
 .button {
   @include button;
   padding: 5px 10px;
@@ -12,6 +34,7 @@
   border-radius: 2px;
   border: 0px solid $white90;
   font-size: 16px;
+  box-shadow: 1px 1px 2px $grey3;
 
 
   &.green {
@@ -124,4 +147,5 @@
     padding-bottom: 60px;
   }
 }
+
 
