--- a/src/views/models/DatabrowserView/Cell.scss
+++ b/src/views/models/DatabrowserView/Cell.scss
@@ -10,7 +10,7 @@
   height: 47px;
   position: relative;
   text-overflow: ellipsis;
-  cursor: pointer;
+  cursor: default;
 
   .border {
     width: 100%;
