--- a/src/views/ActionsView/ActionBoxes.scss
+++ b/src/views/ActionsView/ActionBoxes.scss
@@ -17,6 +17,7 @@
   appearance: none;
   box-shadow: none;
   background: transparent;
+  width: 100%;
 
   @include placeholder {
     color: #8E96A3;
