--- a/src/views/models/SchemaView/SchemaView.scss
+++ b/src/views/models/SchemaView/SchemaView.scss
@@ -18,7 +18,6 @@
   font-size: 16px;
   color: $grey4;
   background: white;
-  box-shadow: 1px 1px 2px $grey3;
 
   &.selected {
     color: white;
@@ -34,7 +33,7 @@
   border-radius: 2px;
   border: 0px solid $white90;
   font-size: 16px;
-  box-shadow: 1px 1px 2px $grey3;
+  box-shadow: 1px 1px 2px $gray07;
 
 
   &.green {
