--- a/src/views/playground/PlaygroundView/PlaygroundView.scss
+++ b/src/views/playground/PlaygroundView/PlaygroundView.scss
@@ -4,6 +4,10 @@
   width: 100%;
   height: 100%;
   position: relative;
+  border-left: 6px solid rgb(9,20,28);
+  a {
+    text-decoration: underline;
+  }
 }
 
 .historyOverlay {
@@ -49,8 +53,4 @@
   justify-content: flex-end;
   padding: 6px 15px;
   color: #ccc;
-}
-
-.graphiql {
-  height: calc(100vh - 40px);
 }
