--- a/src/styles/codemirror.css
+++ b/src/styles/codemirror.css
@@ -35,7 +35,7 @@
     padding: 0 3px 0 5px;
     min-width: 20px;
     text-align: right;
-    color: #999;
+    color: rgba(255,255,255,.2);
     white-space: nowrap;
 }
 
