--- a/src/views/models/DatabrowserView/HeaderCell.scss
+++ b/src/views/models/DatabrowserView/HeaderCell.scss
@@ -2,7 +2,7 @@
 @import '~styles/mixins';
 
 .root {
-  padding: 0 20px;
+  padding: 0;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -89,7 +89,10 @@
   }
 
   .edit {
-    padding: 5px;
+    background: #fafafa;
+    box-shadow: 0 0 6px 3px #fafafa;
+    padding: 2px;
+    border-radius: 100%;
     display: none;
 
     &:hover {
@@ -106,7 +109,8 @@
 
 .sort {
   opacity: 0;
-  padding: 10px 0 10px 10px;
+  box-sizing: border-box;
+  padding: 10px;
   cursor: pointer;
 
   &:hover {
