--- a/src/styles/codemirror.css
+++ b/src/styles/codemirror.css
@@ -27,7 +27,6 @@
 
 .CodeMirror-gutters {
     border-right: 1px solid #ddd;
-    background-color: #f7f7f7;
     white-space: nowrap;
 }
 .CodeMirror-linenumbers {}
@@ -152,12 +151,12 @@ div.CodeMirror span.CodeMirror-matchingbracket {color: rgba(255,255,255,.4); tex
 .CodeMirror {
     position: relative;
     overflow: hidden;
-    background-color: rgb(15,32,45);
+    background-color: rgb(15,32,45) !important;
 }
 
 .CodeMirror-gutters {
-    border-right: none;
-    background-color: rgb(15,32,45);
+    border-right: none !important;
+    background-color: rgb(15,32,45) !important;
 }
 
 .CodeMirror-scroll {
